samples/_failures_safe/1761089303_c1b78c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80337829.c: In function ‘main’:
./samples/SAFE/__tmp_80337829.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_80337829.c:150:5: error: expected declaration or statement at end of input
  150 |     if
      |     ^~
